--- a/Webpagina/Components/Layout/NavMenu.razor
+++ b/Webpagina/Components/Layout/NavMenu.razor
@@ -15,13 +15,25 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="paprika">
+            <NavLink class="nav-link" href="colorDetection">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span>
-                Bellpepper colors
+                Color Detection
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="battery">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-battery-full" viewBox="0 0 16 16">
+                    <path d="M2 6h10v4H2z" />
+                    <path
+                        d="M2 4a2 2 0 0 0-2 2v4a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm10 1a1 1 0 0 1 1 1v4a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1zm4 3a1.5 1.5 0 0 1-1.5 1.5v-3A1.5 1.5 0 0 1 16 8" />
+                </svg>
+                Battery
+            </NavLink>
+        </div>
+
+        @* <div class="nav-item px-3">
             <NavLink class="nav-link" href="weather">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                     class="bi bi-cloud-sun" viewBox="0 0 16 16">
@@ -32,7 +44,7 @@
                 </svg>
                 Weather
             </NavLink>
-        </div>
+        </div> *@
 
 
     </nav>
